4-pod-with-volume-service-and-secret.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment2
spec:
  selector:
    matchLabels:
      name: my-app2
  template:
    metadata:
      labels:
        name: my-app2
    spec:
      containers:
        - name: container-mariadb
          image: mariadb:10.4
          args:
            - --init-file
            - /shared-files/schema.sql
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
            - name: root
              mountPath: /shared-files
      volumes:
        - name: db-data
          hostPath:
            path: /data/volume-example
        - name: root
          hostPath:
            path: /

---

apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: ClusterIP
  selector:
    name: my-app2
  ports:
  - port: 3306
    targetPort: 3306
